syntax = "proto3";

package getCaptcha;

option go_package = "./proto;getCaptcha";

service GetCaptcha {
	rpc Call(CallRequest) returns (CallResponse) {}

}

message CallRequest {
}

message CallResponse {
	bytes img = 1;	//使用切片存储图片信息,用json序列化
} 